@@ -1,1 +1,15 @@
+Commands for compiling:
 
+`javac -d . AttendanceData.java `
+
+`javac -d . MarksData.java `
+
+`javac -d . --module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml OpenPages.java `
+
+`javac --module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml SchoolManagementSystem.java `
+
+
+
+Command for running the code:
+
+`java --module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml SchoolManagementSystem `
